SERVER-26769 Balancer loads balancer settings before recovery and accepting/starting new migrations