jstests/sharding/jumbo1.js
@@ -14,12 +14,15 @@
         big += ".";
     }
 
+    // Create sufficient documents to create a jumbo chunk, and use the same shard key in all of
+    // them so that the chunk cannot be split.
     var x = 0;
     var bulk = db.foo.initializeUnorderedBulkOp();
     for (var i = 0; i < 500; i++) {
         bulk.insert({x: x, big: big});
     }
 
+    // Create documents with different shard keys that can be split and moved without issue.
     for (; x < 1500; x++) {
         bulk.insert({x: x, big: big});
     }
@@ -43,6 +46,7 @@
         return d < 5;
     }, "balance didn't happen", 1000 * 60 * 5, 5000);
 
+    // Check that the jumbo chunk did not move, which shouldn't be possible.
     var jumboChunk =
         s.getDB('config').chunks.findOne({ns: 'test.foo', min: {$lte: {x: 0}}, max: {$gt: {x: 0}}});
     assert.eq('shard0001', jumboChunk.shard, 'jumbo chunk ' + tojson(jumboChunk) + ' was moved');
